[package]
name = "geom"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.69"
earcutr = "0.4.3"
fs-err = "2.9.0"
geo = "0.27.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
histogram = "0.6.9"
instant = "0.1.7"
ordered-float = { version = "4.1.1", features=["serde"] }
polylabel = "3.1.0"
rstar = "0.11.0"
serde = "1.0.193"
serde_json = "1.0.108"

[dev-dependencies]
bincode = "1.3.1"
rand = "0.8.3"
rand_xorshift = "0.3.0"
